[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 'z'

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
async-executor = { version = "1.13.2", features = ["static"] }
futures = { version = "0.3.31", features = ["async-await"] }
reactive-cache = { version = "0.2.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time", "macros", "rt"] }
