[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
async-cancellation-token = "0.1.3"
async-executor = { version = "1.13.2", features = ["static"] }
futures = { version = "0.3.31", features = ["async-await"] }
itertools = "0.14.0"
itertools-num = "0.1.3"
pin-project = "1.1.10"
reactive-cache = { version = "0.4.0-alpha.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stack-cstr = "0.1.3"
thiserror = "2.0.16"
tokio = { version = "1", features = ["time", "macros", "rt"] }
